# dashboard

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  road-map.md  variety_categories.json  vitest.config.ts
api/: Dockerfile  README.md  pyproject.toml
api/app/: __init__.py  catalog.py  constants.py  futures_repository.py  main.py  payloads.py
api/app/payload_builders/: __init__.py  calendar_spread.py  inter_commodity_spread.py  monthly_change.py  seasonal.py  term_structure.py
data/: FUTURES_PARQUET_README.md  futures_main.parquet  futures_suffix.parquet
nginx/: default.conf
public/data/: categories.json  chart-data.json  navigation.json
scripts/: deploy.sh  launch.sh
src/: App.css  App.js  App.test.tsx  App.tsx  i18n.test.ts  i18n.ts  index.css  index.tsx
src/app/: globals.css  layout.tsx
src/components/: ChartPanel.tsx  ComingSoonPanel.tsx  LanguageSwitcher.tsx  PillNav.tsx  SideMenu.tsx  TopNav.tsx
src/config/: site.ts
src/hooks/: useCategories.test.tsx  useCategories.ts  useChartData.test.tsx  useChartData.ts  useFilters.ts  useNavigation.test.tsx  useNavigation.ts
src/locales/: en.ts  zh.ts
src/types/: chart.ts  nav.ts
src/utils/: chart.test.ts  chart.ts  guards.test.ts  guards.ts  nav.ts
web/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.js  package.json  pnpm-lock.yaml  vitest.setup.ts
web/public/data/: categories.json  filters.json  navigation.json
web/src/: App.navigation-term.test.tsx  App.seasonal-monthly.test.tsx  App.spreads.test.tsx  App.test.tsx  App.tsx  i18n.test.ts
(+402 files in other folders)
