[project]
name = "dashboard-api"
version = "0.1.0"
description = "FastAPI backend for futures dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pyarrow>=23.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
